v1.0.0/modules/schema/pages/class/WindPitchContPowerIEC.adoc
= `WindPitchContPowerIEC`
:toclevels: 4


+++Pitch control power model.
Reference: IEC 61400-27-1:2015, 5.6.5.1.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:WindPitchContPowerIEC`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`WindPitchContPowerIEC`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
WindPitchContPowerIEC {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}

















WindGenTurbineType2IEC {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



WindDynamicsLookupTable {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



WindGenTurbineType1bIEC {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}











WindPitchContPowerIEC -> WindGenTurbineType2IEC: WindGenTurbineType2IEC


WindPitchContPowerIEC -> WindDynamicsLookupTable: WindDynamicsLookupTable


WindPitchContPowerIEC -> WindGenTurbineType1bIEC: WindGenTurbineType1bIEC


WindPitchContPowerIEC -> DiagramObject: DiagramObjects


WindPitchContPowerIEC -> InstanceSet: InstanceSet


WindPitchContPowerIEC -> Name: Names


WindPitchContPowerIEC -> ChangeSetMember: PropertiesCIMDataObject


WindPitchContPowerIEC -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<WindDynamicsLookupTable,`WindDynamicsLookupTable`>>
| 1..*
| xref::class/WindDynamicsLookupTable.adoc[`WindDynamicsLookupTable`]
| +++The wind dynamics lookup table associated with this pitch control power model.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<WindGenTurbineType1bIEC,`WindGenTurbineType1bIEC`>>
| 0..1
| xref::class/WindGenTurbineType1bIEC.adoc[`WindGenTurbineType1bIEC`]
| +++Wind turbine type 1B model with which this pitch control power model is associated.+++

| <<WindGenTurbineType2IEC,`WindGenTurbineType2IEC`>>
| 0..1
| xref::class/WindGenTurbineType2IEC.adoc[`WindGenTurbineType2IEC`]
| +++Wind turbine type 2 model with which this pitch control power model is associated.+++

| <<dpmax,`dpmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Rate limit for increasing power (<i>dp</i><i><sub>max</sub></i>) (&gt; WindPitchContPowerIEC.dpmin). It is a type-dependent parameter.+++

| <<dpmin,`dpmin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Rate limit for decreasing power (<i>dp</i><i><sub>min</sub></i>) (&lt; WindPitchContPowerIEC.dpmax). It is a type-dependent parameter.+++

| <<pmin,`pmin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum power setting (<i>p</i><i><sub>min</sub></i>). It is a type-dependent parameter.+++

| <<pset,`pset`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++If <i>p</i><i><sub>init</sub></i><sub> </sub>&lt; <i>p</i><i><sub>set</sub></i><sub> </sub>then power will be ramped down to <i>p</i><i><sub>min</sub></i>. It is (<i>p</i><i><sub>set</sub></i>) in the IEC 61400-27-1:2015. It is a type-dependent parameter.+++

| <<t1,`t1`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Lag time constant (<i>T</i><i><sub>1</sub></i>) (&gt;= 0). It is a type-dependent parameter.+++

| <<tr,`tr`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Voltage measurement time constant (<i>T</i><i><sub>r</sub></i>) (&gt;= 0). It is a type-dependent parameter.+++

| <<uuvrt,`uuvrt`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Dip detection threshold (<i>u</i><i><sub>UVRT</sub></i>). It is a type-dependent parameter.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#dpmax]
=== `dpmax`
+++Rate limit for increasing power (<i>dp</i><i><sub>max</sub></i>) (&gt; WindPitchContPowerIEC.dpmin). It is a type-dependent parameter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindPitchContPowerIEC.dpmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#dpmin]
=== `dpmin`
+++Rate limit for decreasing power (<i>dp</i><i><sub>min</sub></i>) (&lt; WindPitchContPowerIEC.dpmax). It is a type-dependent parameter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindPitchContPowerIEC.dpmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#pmin]
=== `pmin`
+++Minimum power setting (<i>p</i><i><sub>min</sub></i>). It is a type-dependent parameter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindPitchContPowerIEC.pmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#pset]
=== `pset`
+++If <i>p</i><i><sub>init</sub></i><sub> </sub>&lt; <i>p</i><i><sub>set</sub></i><sub> </sub>then power will be ramped down to <i>p</i><i><sub>min</sub></i>. It is (<i>p</i><i><sub>set</sub></i>) in the IEC 61400-27-1:2015. It is a type-dependent parameter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindPitchContPowerIEC.pset`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#t1]
=== `t1`
+++Lag time constant (<i>T</i><i><sub>1</sub></i>) (&gt;= 0). It is a type-dependent parameter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindPitchContPowerIEC.t1`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#tr]
=== `tr`
+++Voltage measurement time constant (<i>T</i><i><sub>r</sub></i>) (&gt;= 0). It is a type-dependent parameter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindPitchContPowerIEC.tr`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#uuvrt]
=== `uuvrt`
+++Dip detection threshold (<i>u</i><i><sub>UVRT</sub></i>). It is a type-dependent parameter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindPitchContPowerIEC.uuvrt`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#WindDynamicsLookupTable]
=== `WindDynamicsLookupTable`
+++The wind dynamics lookup table associated with this pitch control power model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindPitchContPowerIEC.WindDynamicsLookupTable`
| Cardinality
| 1..*
| Type
| xref::class/WindDynamicsLookupTable.adoc[`WindDynamicsLookupTable`]


|===

//[discrete]
[#WindGenTurbineType1bIEC]
=== `WindGenTurbineType1bIEC`
+++Wind turbine type 1B model with which this pitch control power model is associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindPitchContPowerIEC.WindGenTurbineType1bIEC`
| Cardinality
| 0..1
| Type
| xref::class/WindGenTurbineType1bIEC.adoc[`WindGenTurbineType1bIEC`]


|===

//[discrete]
[#WindGenTurbineType2IEC]
=== `WindGenTurbineType2IEC`
+++Wind turbine type 2 model with which this pitch control power model is associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindPitchContPowerIEC.WindGenTurbineType2IEC`
| Cardinality
| 0..1
| Type
| xref::class/WindGenTurbineType2IEC.adoc[`WindGenTurbineType2IEC`]


|===


