v1.1.0/modules/schema/pages/class/WindPitchContPowerIEC.adoc
= `WindPitchContPowerIEC`
:toclevels: 4


+++Pitch control power model.
Reference: IEC 61400-27-1:2015, 5.6.5.1.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:WindPitchContPowerIEC`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`WindPitchContPowerIEC`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<WindDynamicsLookupTable,`WindDynamicsLookupTable`>>
//| [[slots_table.WindDynamicsLookupTable]]<<WindDynamicsLookupTable,`WindDynamicsLookupTable`>>
| 1..* +
xref::class/WindDynamicsLookupTable.adoc[`WindDynamicsLookupTable`]
| +++The wind dynamics lookup table associated with this pitch control power model.+++
| _n/a_

| <<WindGenTurbineType1bIEC,`WindGenTurbineType1bIEC`>>
//| [[slots_table.WindGenTurbineType1bIEC]]<<WindGenTurbineType1bIEC,`WindGenTurbineType1bIEC`>>
| 0..1 +
xref::class/WindGenTurbineType1bIEC.adoc[`WindGenTurbineType1bIEC`]
| +++Wind turbine type 1B model with which this pitch control power model is associated.+++
| _n/a_

| <<WindGenTurbineType2IEC,`WindGenTurbineType2IEC`>>
//| [[slots_table.WindGenTurbineType2IEC]]<<WindGenTurbineType2IEC,`WindGenTurbineType2IEC`>>
| 0..1 +
xref::class/WindGenTurbineType2IEC.adoc[`WindGenTurbineType2IEC`]
| +++Wind turbine type 2 model with which this pitch control power model is associated.+++
| _n/a_

| <<dpmax,`dpmax`>>
//| [[slots_table.dpmax]]<<dpmax,`dpmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Rate limit for increasing power (<i>dp</i><i><sub>max</sub></i>) (&gt; WindPitchContPowerIEC.dpmin). It is a type-dependent...+++
| _n/a_

| <<dpmin,`dpmin`>>
//| [[slots_table.dpmin]]<<dpmin,`dpmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Rate limit for decreasing power (<i>dp</i><i><sub>min</sub></i>) (&lt; WindPitchContPowerIEC.dpmax). It is a type-dependent...+++
| _n/a_

| <<pmin,`pmin`>>
//| [[slots_table.pmin]]<<pmin,`pmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum power setting (<i>p</i><i><sub>min</sub></i>). It is a type-dependent parameter.+++
| _n/a_

| <<pset,`pset`>>
//| [[slots_table.pset]]<<pset,`pset`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++If <i>p</i><i><sub>init</sub></i><sub> </sub>&lt; <i>p</i><i><sub>set</sub></i><sub> </sub>then power will be ramped down to...+++
| _n/a_

| <<t1,`t1`>>
//| [[slots_table.t1]]<<t1,`t1`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Lag time constant (<i>T</i><i><sub>1</sub></i>) (&gt;= 0). It is a type-dependent parameter.+++
| _n/a_

| <<tr,`tr`>>
//| [[slots_table.tr]]<<tr,`tr`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Voltage measurement time constant (<i>T</i><i><sub>r</sub></i>) (&gt;= 0). It is a type-dependent parameter.+++
| _n/a_

| <<uuvrt,`uuvrt`>>
//| [[slots_table.uuvrt]]<<uuvrt,`uuvrt`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Dip detection threshold (<i>u</i><i><sub>UVRT</sub></i>). It is a type-dependent parameter.+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#dpmax]
=== `dpmax`
+++Rate limit for increasing power (<i>dp</i><i><sub>max</sub></i>) (&gt; WindPitchContPowerIEC.dpmin). It is a type-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPitchContPowerIEC.dpmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.dpmax,&#10548;>>
--
////


//[discrete]
[#dpmin]
=== `dpmin`
+++Rate limit for decreasing power (<i>dp</i><i><sub>min</sub></i>) (&lt; WindPitchContPowerIEC.dpmax). It is a type-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPitchContPowerIEC.dpmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.dpmin,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#pmin]
=== `pmin`
+++Minimum power setting (<i>p</i><i><sub>min</sub></i>). It is a type-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPitchContPowerIEC.pmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pmin,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#pset]
=== `pset`
+++If <i>p</i><i><sub>init</sub></i><sub> </sub>&lt; <i>p</i><i><sub>set</sub></i><sub> </sub>then power will be ramped down to <i>p</i><i><sub>min</sub></i>. It is (<i>p</i><i><sub>set</sub></i>) in the IEC 61400-27-1:2015. It is a type-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPitchContPowerIEC.pset`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pset,&#10548;>>
--
////


//[discrete]
[#t1]
=== `t1`
+++Lag time constant (<i>T</i><i><sub>1</sub></i>) (&gt;= 0). It is a type-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPitchContPowerIEC.t1`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t1,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#tr]
=== `tr`
+++Voltage measurement time constant (<i>T</i><i><sub>r</sub></i>) (&gt;= 0). It is a type-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPitchContPowerIEC.tr`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tr,&#10548;>>
--
////


//[discrete]
[#uuvrt]
=== `uuvrt`
+++Dip detection threshold (<i>u</i><i><sub>UVRT</sub></i>). It is a type-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPitchContPowerIEC.uuvrt`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.uuvrt,&#10548;>>
--
////


//[discrete]
[#WindDynamicsLookupTable]
=== `WindDynamicsLookupTable`
+++The wind dynamics lookup table associated with this pitch control power model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPitchContPowerIEC.WindDynamicsLookupTable`
| Cardinality
| 1..*
| Type
| xref::class/WindDynamicsLookupTable.adoc[`WindDynamicsLookupTable`]


|===

////
[.text-left]
--
<<slots_table.WindDynamicsLookupTable,&#10548;>>
--
////


//[discrete]
[#WindGenTurbineType1bIEC]
=== `WindGenTurbineType1bIEC`
+++Wind turbine type 1B model with which this pitch control power model is associated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPitchContPowerIEC.WindGenTurbineType1bIEC`
| Cardinality
| 0..1
| Type
| xref::class/WindGenTurbineType1bIEC.adoc[`WindGenTurbineType1bIEC`]


|===

////
[.text-left]
--
<<slots_table.WindGenTurbineType1bIEC,&#10548;>>
--
////


//[discrete]
[#WindGenTurbineType2IEC]
=== `WindGenTurbineType2IEC`
+++Wind turbine type 2 model with which this pitch control power model is associated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPitchContPowerIEC.WindGenTurbineType2IEC`
| Cardinality
| 0..1
| Type
| xref::class/WindGenTurbineType2IEC.adoc[`WindGenTurbineType2IEC`]


|===

////
[.text-left]
--
<<slots_table.WindGenTurbineType2IEC,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/WindDynamicsLookupTable.adoc[`WindDynamicsLookupTable`] | xref::class/WindDynamicsLookupTable.adoc#WindPitchContPowerIEC[`WindPitchContPowerIEC`]



| xref::class/WindGenTurbineType1bIEC.adoc[`WindGenTurbineType1bIEC`] | xref::class/WindGenTurbineType1bIEC.adoc#WindPitchContPowerIEC[`WindPitchContPowerIEC`]



| xref::class/WindGenTurbineType2IEC.adoc[`WindGenTurbineType2IEC`] | xref::class/WindGenTurbineType2IEC.adoc#WindPitchContPowerIEC[`WindPitchContPowerIEC`]


|===

